--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zakia.idn.ojekonlinefirebase">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-
-    <!-- mengizinkan app mengakses lokasi yang tepat-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- mengizinkan user mengakses perkiraan lokasi-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!-- mengizinkan app mengakses lokasi yang tepat -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- mengizinkan user mengakses perkiraan lokasi -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -21,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activity.WaitingDriverActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,7 +33,7 @@
 
         <activity
             android:name=".maps.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <activity android:name=".activity.AuthentikasiHpActivity" />
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
